r2e-compile-tests/cases/events/fail/consumer_uses_request_field.stderr
error[E0609]: no field `user` on type `&AccountController`
  --> cases/events/fail/consumer_uses_request_field.rs:42:37
   |
42 |         let _ = (&event.name, &self.user);
   |                                     ^^^^ unknown field
   |
   = note: available fields are: `event_bus`, `__r2e_decos`
